# dbt-unit-test-coverage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: application-tests.yaml
dbt_unit_test_coverage/: __init__.py  __main__.py  constants.py  main.py
dbt_unit_test_coverage/badge/: __init__.py  badge.py
dbt_unit_test_coverage/coverage/: __init__.py  coverage.py  coverage.sql
dbt_unit_test_coverage/dbt/: __init__.py  config.py  models.py  unit_tests.py
tests/: __init__.py
tests/integration/: test__integration.py
tests/integration/jaffle-shop/: dbt-commands.sh  dbt_project.yml  packages.yml  profiles.yml
tests/integration/jaffle-shop/macros/: generate_schema_name.sql
tests/integration/jaffle-shop/models/: _docs.md
tests/integration/jaffle-shop/models/presentation/: _schema.yml  pl__customers.sql
tests/integration/jaffle-shop/models/staging/: _schema.yml
tests/unit/: __init__.py  conftest.py  test__main.py
tests/unit/badge/: test__badge.py
tests/unit/coverage/: test__coverage.py
tests/unit/dbt/: test__config.py  test__models.py  test__unit_tests.py
