[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "dbt_unit_test_coverage"
version = "0.0.2"  # Keep in sync with the README.md
description = "Coverage metrics for dbt unit tests."
license = "MIT"
authors = ["Bilbottom", "darkdreamingdan"]
readme = "README.md"
repository = "https://github.com/Bilbottom/dbt-unit-test-coverage"
packages = [{include = "dbt_unit_test_coverage"}]

[tool.poetry.scripts]
dbt-unit-test-coverage = 'dbt_unit_test_coverage.__main__:app'
dbt-cov = 'dbt_unit_test_coverage.__main__:app'  # Convenience alias

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pybadges = "^3.0.0"
pyyaml = "^6.0.1"
sqlglot = "^17.14.2"
jinja2 = "^3.1.2"

[tool.poetry.group]
dev.optional = true
test.optional = true
ide.optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
coverage-badge = "^1.1.0"
dbt-core = "1.4.6"  # Pinned for the SQLite adapter
dbt-sqlite = "1.4.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

# Packages just for IDE integration
[tool.poetry.group.ide.dependencies]
black = "*"


[tool.pytest.ini_options]
required_plugins = "pytest-cov"
addopts = "--cov=dbt_unit_test_coverage --cov-report term-missing"
python_files = "test__*.py"
python_functions = "test__*"
pythonpath = "dbt_unit_test_coverage"
testpaths = ["tests"]
markers = [
    "unit: mark the test as a unit test.",
    "integration: mark the test as an integration test.",
]


[tool.isort]
profile = "black"


[tool.black]
line-length = 120
target_version = ["py39"]
